// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RenderCheckbox/> shoudl call deleteRadioOptionBehaviour when button is clicked 1`] = `
<div>
  <div>
    <p>
      Enter Option 1
    </p>
    <CheckboxOption
      deleteQuestion={[Function]}
      name=""
      optionId={0}
      order={1}
      updateBehaviour={[Function]}
    />
  </div>
  <div
    className="behaviour-container"
  >
    <div
      className="set-behaviour-btn-container"
    />
    <div>
      <div>
        <div
          className="remove-set-behaviour"
        >
           
          <span>
            <ContextMenu
              classNames="table__menu-container"
            >
              <MenuItem
                classNames="delete"
                onClick={[Function]}
              >
                Remove behaviour
              </MenuItem>
            </ContextMenu>
          </span>
          Upon selecting Option 2, enable
        </div>
        <Behaviours
          optionId=""
          order={1}
          type="checkbox"
          updateBehaviour={[Function]}
        />
      </div>
    </div>
  </div>
  <button
    className="anoter-question-btn"
    onClick={[Function]}
    type="button"
  >
    Add a 2nd option
  </button>
</div>
`;

exports[`<RenderCheckbox/> shoudl call deleteRadioOptionBehaviour when the value is false 1`] = `
<div>
  <div>
    <p>
      Enter Option 1
    </p>
    <CheckboxOption
      deleteQuestion={[Function]}
      name=""
      optionId={0}
      order={1}
      updateBehaviour={[Function]}
    />
  </div>
  <div
    className="behaviour-container"
  >
    <div
      className="set-behaviour-btn-container"
    >
      <button
        className="set-behaviour-btn"
        onClick={[Function]}
        type="button"
      >
        Set behaviour
      </button>
    </div>
    <div />
  </div>
  <button
    className="anoter-question-btn"
    onClick={[Function]}
    type="button"
  >
    Add a 2nd option
  </button>
</div>
`;

exports[`<RenderCheckbox/> should render RenderCheckbox component properly 1`] = `
<div>
  <div>
    <p>
      Enter Option 1
    </p>
    <CheckboxOption
      deleteQuestion={[Function]}
      name=""
      optionId={0}
      order={1}
      updateBehaviour={[Function]}
    />
  </div>
  <div
    className="behaviour-container"
  >
    <div
      className="set-behaviour-btn-container"
    >
      <button
        className="set-behaviour-btn"
        onClick={[Function]}
        type="button"
      >
        Set behaviour
      </button>
    </div>
    <div />
  </div>
  <button
    className="anoter-question-btn"
    onClick={[Function]}
    type="button"
  >
    Add a 2nd option
  </button>
</div>
`;

exports[`<RenderCheckbox/> should render RenderCheckbox component properly 2`] = `
<div>
  <div
    className="prompt-item"
  >
    <input
      className="prompt-input"
      id="option-name-input"
      onChange={[Function]}
      placeholder="Yes"
      type="text"
      value=""
    />
    <button
      className="builder-delete-icon"
      id="option-del-icon"
      onClick={[Function]}
      type="button"
    >
      <img
        alt="delete-icon"
        src="delete-icon.svg"
      />
    </button>
  </div>
</div>
`;
